<resources>
    <string name="app_name">Praktikum 10</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="umur">Umur</string>
    <string name="hobby">Hobby</string>
</resources>